--- a/_posts/2020-02-24-markdown.md
+++ b/_posts/2020-02-24-markdown.md
@@ -1,22 +1,32 @@
 ---
 layout: post
-author: Supun Kavinda
-title: Styling with Markdown
+author: C4sp3n
+title: Montando Un Nodo Bastión AWS
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
+En este artículo plasmaré mi experiencia montando un Servidor Bastión para tunelizar todos los accesos a nuestra VPN o VPC (en AWS).
 
 ![800x600](https://i.picsum.photos/id/688/800/600.jpg)
 
-## Some great heading (h2)
+## Primeros pasos
 
-Proin convallis mi ac felis pharetra aliquam. Curabitur dignissim accumsan rutrum. In arcu magna, aliquet vel pretium et, molestie et arcu.
+Creamos una Instancia en EC2 de AWS con un tipo adaptado a nuestras necesidades y un Sistema operativo de Amazon Linux con un Grupo de Seguridad exclusivo que solo permitirá las conexiones a través del SSH por IP. Estas IP corresponderán a los administradores de la empresa/Proyecto. Recordad que en el último paso debemos crear un par de claves para "SuperAdmins" que controlará el acceso a Bastión de los Admins.
 
-Mauris lobortis nulla et felis ullamcorper bibendum. Phasellus et hendrerit mauris. Proin eget nibh a massa vestibulum pretium. Suspendisse eu nisl a ante aliquet bibendum quis a nunc. Praesent varius interdum vehicula. Aenean risus libero, placerat at vestibulum eget, ultricies eu enim. Praesent nulla tortor, malesuada adipiscing adipiscing sollicitudin, adipiscing eget est.
+## Manos a la obra
 
-## Another great heading (h2)
+Una vez creada nuestra instancia, loguearemos con el usuario por defecto de la instancia y la clave de SuperAdmin. Después de loguear realizaremos los siguientes pasos:
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
+```html
+<html>
+  <head>
+  </head>
+  <body>
+    <li>Hello, World!</li>
+  </body>
+</html>
+```
+
+
 
 ### Some great subheading (h3)
 
