--- a/_posts/2020-02-24-markdown.md
+++ b/_posts/2020-02-24-markdown.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-author: C4sp3n
-title: Montando Un Nodo Bastión AWS
+author: SlaXx
+title: Primer post de test
 ---
 
 En este artículo plasmaré mi experiencia montando un Servidor Bastión para tunelizar todos los accesos a nuestra VPN o VPC (en AWS).
